[package]
name = "bussy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = true, features = ["client", "cache", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
dotenv = "0.15.0"
chrono = "0.4.19"
serde = "1.0.130"
serde_yaml = "0.8.21"